src/test/ui/rfc-2632-const-trait-impl/const-trait-bound-opt-out/without-question-mark.stderr
error: expected one of `!`, `(`, `,`, `=`, `>`, `?`, `for`, lifetime, or path, found keyword `const`
  --> $DIR/without-question-mark.rs:6:13
   |
LL | struct S<T: const Tr>;
   |             ^^^^^ expected one of 9 possible tokens

error: aborting due to previous error

